Add possibility of stream with extra data and with incorrect number of words revealing